syntax = "proto3";

package coordinator;

service LnctlCoordinator {
  rpc ListConnectors(ListConnectorsRequest) returns (ListConnectorsResponse) {}
}

message ListConnectorsRequest {}

message ListConnectorsResponse {
  repeated ConnectorInfo connectors = 1;
}

message ConnectorInfo {
  string id = 1;
  string monitored_node_id = 2;
  string type = 3;
}
